// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The toggle group component should render multiple select toggle group 1`] = `
<div
  class="Tabs"
  dir="ltr"
  role="group"
  style="outline: none;"
  tabindex="0"
>
  <button
    aria-pressed="false"
    class="Tabs__item"
    data-radix-collection-item=""
    data-state="off"
    tabindex="-1"
    type="button"
  >
    <div
      class="Tabs__item__label"
    >
      Hello
    </div>
  </button>
  <button
    aria-pressed="true"
    class="Tabs__item"
    data-radix-collection-item=""
    data-state="on"
    tabindex="-1"
    type="button"
  >
    <div
      class="Tabs__item__label"
    >
      Hi
    </div>
  </button>
  <button
    aria-pressed="true"
    class="Tabs__item"
    data-radix-collection-item=""
    data-state="on"
    tabindex="-1"
    type="button"
  >
    <div
      class="Tabs__item__label"
    >
      Goodbye
    </div>
  </button>
</div>
`;

exports[`The toggle group component should render single select toggle group 1`] = `
<div
  class="Tabs"
  dir="ltr"
  role="group"
  style="outline: none;"
  tabindex="0"
>
  <button
    aria-checked="false"
    class="Tabs__item"
    data-radix-collection-item=""
    data-state="off"
    role="radio"
    tabindex="-1"
    type="button"
  >
    <div
      class="Tabs__item__label"
    >
      Hello
    </div>
  </button>
  <button
    aria-checked="true"
    class="Tabs__item"
    data-radix-collection-item=""
    data-state="on"
    role="radio"
    tabindex="-1"
    type="button"
  >
    <div
      class="Tabs__item__label"
    >
      Hi
    </div>
  </button>
  <button
    aria-checked="false"
    class="Tabs__item"
    data-radix-collection-item=""
    data-state="off"
    role="radio"
    tabindex="-1"
    type="button"
  >
    <div
      class="Tabs__item__label"
    >
      Goodbye
    </div>
  </button>
</div>
`;

exports[`The toggle group component should render toggle group with custom items 1`] = `
<div
  class="Tabs"
  dir="ltr"
  role="group"
  style="outline: none;"
  tabindex="0"
>
  <button
    aria-checked="false"
    class="Tabs__item"
    data-radix-collection-item=""
    data-state="off"
    role="radio"
    tabindex="-1"
    type="button"
  >
    <div
      style="width: 10px; height: 10px; background: red; margin: 10px;"
    />
  </button>
  <button
    aria-checked="true"
    class="Tabs__item"
    data-radix-collection-item=""
    data-state="on"
    role="radio"
    tabindex="-1"
    type="button"
  >
    <div
      style="width: 10px; height: 10px; background: blue; border-radius: 50%; margin: 10px;"
    />
  </button>
  <button
    aria-checked="false"
    class="Tabs__item"
    data-radix-collection-item=""
    data-state="off"
    role="radio"
    tabindex="-1"
    type="button"
  >
    <div
      style="width: 0px; height: 0px; border-left: 5px solid transparent; border-right: 5px solid transparent; border-bottom: 10px solid green; margin: 10px;"
    />
  </button>
</div>
`;

exports[`The toggle group component should render toggle group with no selected value 1`] = `
<div
  class="Tabs"
  dir="ltr"
  role="group"
  style="outline: none;"
  tabindex="0"
>
  <button
    aria-checked="false"
    class="Tabs__item"
    data-radix-collection-item=""
    data-state="off"
    role="radio"
    tabindex="-1"
    type="button"
  >
    <div
      class="Tabs__item__label"
    >
      Hello
    </div>
  </button>
  <button
    aria-checked="false"
    class="Tabs__item"
    data-radix-collection-item=""
    data-state="off"
    role="radio"
    tabindex="-1"
    type="button"
  >
    <div
      class="Tabs__item__label"
    >
      Hi
    </div>
  </button>
  <button
    aria-checked="false"
    class="Tabs__item"
    data-radix-collection-item=""
    data-state="off"
    role="radio"
    tabindex="-1"
    type="button"
  >
    <div
      class="Tabs__item__label"
    >
      Goodbye
    </div>
  </button>
</div>
`;
